# vocespace-server

./: .gitignore  Cargo.toml  development.example.env  vocespace.db  vocespace.html
.cargo/: config.toml
src/: error.rs  lib.rs  main.rs  router.rs
src/api/: license.rs  mod.rs  rooms.rs  s3.rs  smtp.rs  token.rs  util.rs
src/db/: mod.rs
src/entry/: mod.rs  rooms.rs
src/s3/: mod.rs
