[package]
name = "live_end"
version = "0.1.0"
edition = "2021"

[dependencies]
livekit-api = "0.4.2"
salvo = "0.76.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# warp = "0.3.7"
